--- a/page2.html
+++ b/page2.html
@@ -60,7 +60,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="page9.html" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy offline site design</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1g" style="background-image: url(assets/images/malalala-2000x2184-59.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free offline web site builder software download</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1g" style="background-image: url(assets/images/malalala-2000x2184-59.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
