--- a/page3.html
+++ b/page3.html
@@ -62,7 +62,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="page9.html" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web site creator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-2g" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 6rem; padding-bottom: 6rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop site builder software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-2g" data-filter="true" style="background-color: rgb(255, 255, 255); padding-top: 6rem; padding-bottom: 6rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active gallery-filter__bg">
         <ul>
