--- a/page5.html
+++ b/page5.html
@@ -59,7 +59,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="page9.html" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web page creator software download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-2t" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free website generator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-2t" style="background-color: rgb(255, 255, 255);">
 
     
 
