--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/socicon.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -48,7 +47,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/kaartjelogo-m10-205x128-76.png" alt="Mobirise"></a>
+                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/kaartjelogo-m10-205x128-67.png" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +58,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="page9.html" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page9.html" aria-expanded="true" data-toggle="dropdown-submenu"><p>PRODUCT&nbsp;</p></a><div class="dropdown-menu"><a class="dropdown-item" href="page9.html">UITVOERING</a><a class="dropdown-item" href="page10.html">EXPERIMENTEN</a><a class="dropdown-item" href="page11.html">EINDRESULTAAT</a></div></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -72,9 +71,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop web site builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-1g" style="background-image: url(assets/images/malalala-2000x2184-59.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg web page creator software download</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1g" style="background-image: url(assets/images/tussentitel-2000x392-552.jpg); padding-top: 120px; padding-bottom: 120px;">
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container">
         <div class="row">
@@ -471,7 +470,7 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-contacts1" style="font-size: 60px;"></span></div>
+                <div><img src="assets/images/kaartjelogo-m10-128x79-86.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Adres</strong><br>Mutsaardstraat,&nbsp;<br>2000 Antwerpen</p>
@@ -494,7 +493,6 @@
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
