--- a/page5.html
+++ b/page5.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -48,7 +47,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(124, 112, 107);"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/kaartjelogo-m10-205x128-42.png" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +58,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item"><a class="nav-link link" href="page9.html" aria-expanded="false"><p>PRODUCT&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false"></a></li><li class="nav-item"><a class="nav-link link" href="page1.html" aria-expanded="false"><p>ONDERZOEK&nbsp;</p></a></li><li class="nav-item dropdown"><a class="nav-link link" href="page2.html" aria-expanded="false"><p>PROCES&nbsp;</p></a></li><li class="nav-item"><a class="nav-link link" href="page5.html" aria-expanded="false"><p>INSPIRATIE</p></a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="page9.html" aria-expanded="true" data-toggle="dropdown-submenu"><p>PRODUCT&nbsp;</p></a><div class="dropdown-menu"><a class="dropdown-item" href="page9.html">UITVOERING</a><a class="dropdown-item" href="page10.html">EXPERIMENTEN</a><a class="dropdown-item" href="page11.html">EINDRESULTAAT</a></div></li><li class="nav-item"><a class="nav-link link" href="page4.html" aria-expanded="false"><p>TEAM&nbsp;</p></a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -72,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web page design software download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-2t" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop web page maker software download</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-2t" style="background-color: rgb(255, 255, 255);">
 
     
 
