--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive website creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-40" style="background-image: url(assets/images/voorbladkopie-2000x913-71.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile web generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-40" style="background-image: url(assets/images/voorbladkopie-2000x913-71.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(124, 112, 107);"></div>
 
