--- a/page1.html
+++ b/page1.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple web site creator software download</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3t" style="background-image: url(assets/images/tussentitel-2000x392-55.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web page maker</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3t" style="background-image: url(assets/images/tussentitel-2000x392-55.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -230,7 +230,7 @@ Je kan de ruimte zien als een soort bel die om ons heen zit. Doordat we (onbewus
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-24" style="background-color: rgb(239, 239, 239); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-24" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
