--- a/page2.html
+++ b/page2.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web page creator software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1g" style="background-image: url(assets/images/tussentitel-2000x392-550.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">bootstrap site maker software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-1g" style="background-image: url(assets/images/tussentitel-2000x392-550.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -465,7 +465,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-24" style="background-color: rgb(239, 239, 239); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-24" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
