--- a/page4.html
+++ b/page4.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile web creator software</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2q" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 80px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web development</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2q" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -86,7 +86,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2b" style="background-color: rgb(239, 239, 239); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2b" style="background-color: rgb(239, 239, 239); padding-top: 0px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
