--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile web generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-40" style="background-image: url(assets/images/voorbladkopie-2000x913-71.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-4b" style="background-image: url(assets/images/test-1-slechte-kwaliteit-2000x1013-50.jpg);">
 
-    <div class="mbr-overlay" style="opacity: 0; background-color: rgb(124, 112, 107);"></div>
+    
 
     <div class="mbr-table-cell">
 
@@ -81,8 +81,8 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1"><div style="text-align: left;"></div></h1>
-                    <p class="mbr-section-lead lead"><em>Multidiciplinariteit</em></p>
+                    <h1 class="mbr-section-title display-1"><span style="font-weight: normal;">PERSONAL SPACE</span></h1>
+                    <p class="mbr-section-lead lead">Multidiciplinariteit</p>
                     
                 </div>
             </div>
@@ -102,6 +102,7 @@
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
