--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy html web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-4b" style="background-image: url(assets/images/test-1-slechte-kwaliteit-2000x1013-50.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html website development</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-4b" style="background-image: url(assets/images/test-1-slechte-kwaliteit-2000x1013-50.jpg);">
 
     
 
@@ -102,7 +102,6 @@
   <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
