--- a/page12.html
+++ b/page12.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top bootstrap website generator software download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy offline web creator software download</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-4s" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -84,7 +84,7 @@
                   <h3 class="mbr-section-title display-2"><p>&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: normal;"></span></p><span style="font-weight: normal;">CONCEPT</span><span style="font-weight: normal;"><br></span></h3>
                   <div class="lead">
 
-                    <p>Solid color intro with an image o.</p>
+                    <p>Binnen de context van een multidisciplinair object, hebben we een cross-over gemaakt tussen architectuur en mode. Daarnaast komen de aspecten interieur en ergonomie ook duidelijk aan bod. Het object betreft het thema ‘Personal Space’ waarbij het menselijk lichaam centraal staat. In plaats van mode letterlijk te interpreteren als kledingstuk, waren we op zoek naar een draagbare, abstracte sculptuur die een statement onderbouwt. Aan de hand van verschillende experimenten in publieke ruimtes, konden we veel informatie over dit thema verwerven. Dit hadden we nodig om op een correcte manier aan het ontwerpend onderzoek te starten.<br><br>Een persoon kan zelf bepalen hoe hij zijn persoonlijke ruimte afbakent. Dit is mogelijk aan de hand van verschillende bewegingen. Termen zoals flexibiliteit en beweging zijn cruciaal omdat elke persoon anders is en het object dus ook anders kan gebruiken.<br>Het geheel vertrekt vanuit de stokken als basisvorm. Deze geven ook de mogelijkheid om via scharnierpunten vrij te bewegen en zo agressieve vormen uit te beelden. De stof die ertussen gespannen is, is semi-transparant. Hierdoor kan op elke mogelijke manier het menselijk lichaam zichtbaar blijven. De architecturale vormgeving is ten slotte ook gebaseerd op een verschaling van het lichaam. De rode kleur refereert naar iets agressief en opvallend.<br><br>Langs de ene kant ben je vrij om het object volledig naar eigen hand te zetten en te gebruiken naar eigen wensen. Langs de andere kant zit je vast in een draagbare sculptuur die je steeds met je mee draagt. Dit refereert naar de persoonlijke ruimte die bij iedereen aanwezig is.</p>
 
                   </div>
 
@@ -95,7 +95,7 @@
               
 
 
-              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 58%;">
+              <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 47%;">
                   <div class="mbr-figure"><img src="assets/images/beginbeeld-test2-goed-1400x2097-83.jpg"></div>
               </div>
 
