--- a/page9.html
+++ b/page9.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg web development</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4k" style="background-image: url(assets/images/tussentitel-2000x392-4912.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg web site building</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4k" style="background-image: url(assets/images/tussentitel-2000x392-4915.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -91,7 +91,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><br></p><p>Het uitvoeringsproces van ons ontwerp is zo opgebouwd dat er telkens een aantal handeling herhaald werden, deze bleven per onderdeel gelijk maar de verhoudingen weken van elkaar af aangezien deze afgestemd moesten worden aan de maten van het menselijke lichaam. Hierdoor verschilt het patroon van de armen, benen en ook bij de banden onderling. De banden zijn een belangrijk onderdeel van het ontwerp aangezien deze het geheel bevestigen aan het lichaam. Om de stokken op zijn plaats te houden werd er telkens een buisje voorzien aan de binnenkant.</p><p><br></p><p><br><em>.</em></p></div>
+            <div class="col-xs-12 lead"><p><br></p><p><em>Het uitvoeringsproces van ons ontwerp is zo opgebouwd dat er telkens een aantal handeling herhaald werden, deze bleven per onderdeel gelijk maar de verhoudingen weken van elkaar af aangezien deze afgestemd moesten worden aan de maten van het menselijke lichaam. Hierdoor verschilt het patroon van de armen, benen en ook bij de banden onderling. De banden zijn een belangrijk onderdeel van het ontwerp aangezien deze het geheel bevestigen aan het lichaam. Om de stokken op zijn plaats te houden werd er telkens een buisje voorzien aan de binnenkant.</em></p><p><br></p><p><br><em>.</em></p></div>
         </div>
     </div>
 
