--- a/page1.html
+++ b/page1.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg web builder software download</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3t" style="background-image: url(assets/images/tussentitel-2000x392-78.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap web generator software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-3t" style="background-image: url(assets/images/tussentitel-2000x392-78.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -221,7 +221,7 @@ Je kan de ruimte zien als een soort bel die om ons heen zit. Doordat we (onbewus
                     <div class="card-block">
                         <h4 class="card-title">kleine ruimtes&nbsp;</h4>
                         
-                        <p class="card-text">Tram: Algemeen geweten is dat reizigers altijd eerst een plaatsje zoeken waar men het meest vrije ruimte voor zich heeft, dit voordat men in de buurt van een onbekende gaat zitten. Al zijn er wel een paar gedragingen die ons opvielen zoals het fenomeen dat mensen vaak afleiding zoeken wanneer ze zelf ondervinden dat hun persoonlijke ruimte te klein is, de meest voorkomende actie hier is het beroep doen op de gsm. <br><br><br></p>
+                        <p class="card-text">Algemeen geweten is dat reizigers altijd eerst een plaatsje zoeken waar men het meest vrije ruimte voor zich heeft, dit voordat men in de buurt van een onbekende gaat zitten. Al zijn er wel een paar gedragingen die ons opvielen zoals het fenomeen dat mensen vaak afleiding zoeken wanneer ze zelf ondervinden dat hun persoonlijke ruimte te klein is, de meest voorkomende actie hier is het beroep doen op de gsm. <br><br><br></p>
                         
                     </div>
                 </div>
