--- a/page10.html
+++ b/page10.html
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best bootstrap web page builder software download</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4x" style="background-image: url(assets/images/tussentitel-2000x392-4912.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free mobile website builder</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-4x" style="background-image: url(assets/images/tussentitel-2000x392-4915.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(239, 239, 239);">
     </div>
@@ -91,7 +91,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><span style="font-size: 14px; line-height: 21px;">De experimenten die we bij het vooronderzoek hebben uitgevoerd deden we opnieuw met het prototype. Op deze manier konden we vaststellen of het afbakenen van de personal space goed functioneert in een publieke ruimte. Zo konden we de reacties van de buitenstaanders waarnemen.&nbsp;</span></p></div>
+            <div class="col-xs-12 lead"><p><span style="font-size: 14px; line-height: 21px;"><em>De experimenten die we bij het vooronderzoek hebben uitgevoerd deden we opnieuw met het prototype. Op deze manier konden we vaststellen of het afbakenen van de personal space goed functioneert in een publieke ruimte. Zo konden we de reacties van de buitenstaanders waarnemen.&nbsp;</em></span></p></div>
         </div>
     </div>
 
